src/objects/WS_Info__mdt.object
<CustomObject>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeOut__c</fullName>
        <label>TimeOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WS_Info</label>
    <pluralLabel>WS_Infos</pluralLabel>
</CustomObject>